--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="form-group">
                     <label for="">
-                        Espesor (mm)
+                        Espesor por corte (mm)
                     </label>
                     <input id="inputThickness" type="number" value="0.5">
                 </div>
