se agrega el download

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                     <input id="file" type="file" accept=".xlsx, xls, xml">
                 </div>
                 <button id="btnLoad">Cargar</button>
+                <a href="download/ejemplo.xlsx">
+                    <img src="icons/upload.svg" alt="">
+                    Descargar ejemplo
+                </a>
             </form>
         </div>
         <div class="result-container">
